# numcalc

./: CMakeLists.txt  INSTALL  README.md  numcalc_config.hpp.in
include/: differentiation.hpp  numcalc_config.hpp
test/: .gitignore  CMakeLists.txt  diff_test.cpp
